WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
167463
Fix WebGL diagnostic logging
https://bugs.webkit.org/show_bug.cgi?id=167463
Summary
Fix WebGL diagnostic logging
Chris Dumez
Reported
2017-01-26 13:05:13 PST
Fix WebGL diagnostic logging so that it no longer uses logDiagnosticMessageWithValue(). This is because the value apparently needs to be numeric on Mac.
Attachments
Patch
(7.53 KB, patch)
2017-01-26 13:07 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-01-26 13:05:49 PST
<
rdar://problem/30216981
>
Chris Dumez
Comment 2
2017-01-26 13:07:39 PST
Created
attachment 299838
[details]
Patch
WebKit Commit Bot
Comment 3
2017-01-26 13:36:05 PST
Comment on
attachment 299838
[details]
Patch Clearing flags on attachment: 299838 Committed
r211229
: <
http://trac.webkit.org/changeset/211229
>
WebKit Commit Bot
Comment 4
2017-01-26 13:36:10 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug