Fix WebGL diagnostic logging https://bugs.webkit.org/show_bug.cgi?id=167463 <rdar://problem/30216981>

Reviewed by Alex Christensen.

Fix WebGL diagnostic logging so that it no longer uses logDiagnosticMessageWithValue().
This is because the value apparently needs to be numeric on Mac.

Source/WebCore:

* html/canvas/WebGLRenderingContextBase.cpp:
(WebCore::WebGLRenderingContextBase::checkForContextLossHandling):
* page/DiagnosticLoggingKeys.cpp:
(WebCore::DiagnosticLoggingKeys::pageHandlesWebGLContextLossKey):
(WebCore::WebCore::DiagnosticLoggingKeys::webGLStateKey):
(WebCore::DiagnosticLoggingKeys::stateKey): Deleted.
(WebCore::DiagnosticLoggingKeys::handlesContextLossKey): Deleted.
(WebCore::WebCore::DiagnosticLoggingKeys::webGLKey): Deleted.
* page/DiagnosticLoggingKeys.h:

Source/WebKit2:

* UIProcess/HighPerformanceGraphicsUsageSampler.cpp:
(WebKit::HighPerformanceGraphicsUsageSampler::timerFired):


Canonical link: https://commits.webkit.org/184505@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211229 268f45cc-cd09-0410-ab3c-d52691b4dbfc